--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "1.5.2",
+    "babel-preset-react": "6.24.1",
     "live-server": "^1.2.2",
     "yarn": "^1.22.19"
-  }
+  },
+  "name": "reactjs-bootcamp",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/praneethkumarpidugu/reactjs-bootcamp.git",
+  "author": "Praneeth Pidugu <pidugu2007@gmail.com>",
+  "license": "MIT"
 }
